<resources>
    <string name="app_name">My Cafe App</string>
    <string name="ice_cream_sandwiches">Ice cream sandwiches have chocolate wafers and vanilla filling</string>
    <string name="donuts">Donuts are glazed and sprinkled with candy</string>
    <string name="froyo">Froyo is premium self-serve frozen yoghurt</string>

    <string name="donut_order_message">You ordered a donut</string>
    <string name="ice_cream_order_message">You ordered an ice cream sandwich</string>
    <string name="froyo_order_message">You ordered a Froyo</string>

    <string name="same_day_message_service">Same day messenger service</string>
    <string name="next_day_ground_delivery">Next day ground delivery</string>
    <string name="pick_up">Self Pick up.</string>
    <string name="cafe_desserts">Cafe Desserts</string>
    <string name="name">Name</string>
    <string name="enter_your_name">Enter your Name</string>
    <string name="address">Address</string>
    <string name="enter_your_address">Enter your Address</string>
    <string name="phone">Phone</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="note">Note</string>
    <string name="describe_your_order">Describe your order</string>
    <string name="choose_a_delivery_method">Choose a delivery method</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="enter_your_email_address">Enter your Email Address</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="submit_order">Submit Order</string>
    <string name="received">Received</string>
</resources>