<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderActivity">

    <TextView
        android:id="@+id/order_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text=""/>

    <TextView
        android:id="@+id/name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/order_textview"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/name"/>

    <EditText
        android:id="@+id/name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/name_label"
        app:layout_constraintBaseline_toBaselineOf="@id/name_label"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/enter_your_name"/>

    <TextView
        android:id="@+id/address_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_label"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/address"/>

    <EditText
        android:id="@+id/address_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/address_label"
        app:layout_constraintBaseline_toBaselineOf="@id/address_label"
        android:inputType="textMultiLine"
        android:ems="10"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/enter_your_address"/>

    <TextView
        android:id="@+id/phone_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/address_label"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/phone"/>

    <EditText
        android:id="@+id/phone_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/phone_label"
        app:layout_constraintBaseline_toBaselineOf="@id/phone_label"
        android:inputType="phone"
        android:ems="10"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/enter_your_phone_number"/>

    <TextView
        android:id="@+id/note_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phone_label"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/note"/>

    <EditText
        android:id="@+id/note_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/note_label"
        app:layout_constraintBaseline_toBaselineOf="@id/note_label"
        android:inputType="textCapSentences|textMultiLine"
        android:ems="10"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/describe_your_order"/>

    <TextView
        android:id="@+id/email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/note_label"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/email"/>

    <EditText
        android:id="@+id/email_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/email_label"
        app:layout_constraintBaseline_toBaselineOf="@id/email_label"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/enter_your_email_address"/>

    <TextView
        android:id="@+id/password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_label"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/password"/>

    <EditText
        android:id="@+id/password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/password_label"
        app:layout_constraintBaseline_toBaselineOf="@id/password_label"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/enter_your_password"/>

    <TextView
        android:id="@+id/delivery_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_text"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/choose_a_delivery_method"
        android:textSize="18sp"/>

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/delivery_label"
        >
    <RadioButton
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:onClick="onRadioButtonClicked"
        android:text="@string/same_day_message_service"
        android:id="@+id/sameday"
        />

        <RadioButton
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/next_day_ground_delivery"
            android:id="@+id/nextday"
            />

        <RadioButton
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/pick_up"
            android:id="@+id/pickup"
            />

    </RadioGroup>
    
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_order"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="80dp"
        app:layout_constraintTop_toBottomOf="@+id/radio_group"
        android:layout_marginTop="20dp"
        android:onClick="submit"/>

</androidx.constraintlayout.widget.ConstraintLayout>